--- a/package.json
+++ b/package.json
@@ -1,3 +1,20 @@
 {
-    "type": "module"
+  "type": "module",
+  "name": "adventofcode",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Selph/adventofcode.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Selph/adventofcode/issues"
+  },
+  "homepage": "https://github.com/Selph/adventofcode#readme",
+  "description": ""
 }
